# Dentigem

./: app.py  pyproject.toml
DentiGem_Demo/Patients/: Aisha.md  David.md  Elena.md  James.md  Maria.md  Robert.md  Sofia.md  Steve.md  Tukey.md
DentiGem_Demo/Sessions/: Aisha_2025-06-01.md  Aisha_2025-12-05.md  David_2025-09-10.md  David_2025-11-20.md  David_2026-01-08.md  Elena_2025-10-05.md  Elena_2026-02-14.md  James_2025-07-15.md  James_2025-10-10.md  James_2026-01-20.md  Maria_2025-09-01.md  Maria_2026-02-10.md  Robert_2025-08-20.md  Robert_2026-02-01.md  Sofia_2025-11-15.md  Steve_2024-01-15.md  Steve_2024-06-10.md  Tukey_2024-02-20.md  Tukey_2024-03-25.md
denti_core/: assistant_agent.py  load_models.py  medgemma.py  utils.py
