[project]
name = "dentigem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "dotenv>=0.9.9",
    "gradio>=6.6.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.62.0",
    "pydantic-ai-slim[google]>=1.62.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
